Terminando el proyecto

--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
                 </article>
             </div>
         </section>
+        <footer>
+            <ul>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Contact</a></li>
+            </ul>
+            <span>Copyright 2016, Original Trombones</span>
+            </footer>
     </div>
 
     <script src="https://use.fontawesome.com/f02af17a52.js"></script>
